--- a/4. Multi output classification model using Ensemble learning algorithm (Random Forest).ipynb
+++ b/4. Multi output classification model using Ensemble learning algorithm (Random Forest).ipynb
@@ -4330,12 +4330,192 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ca7a6e38",
+   "metadata": {},
+   "source": [
+    "### Checking classification_report"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c93d8cd0",
+   "metadata": {},
+   "source": [
+    "The classification_report function provides several important metrics including:\n",
+    "\n",
+    "- Precision: The ratio of true positive predictions to the total number of positive predictions made by the model. It measures the accuracy of positive predictions.\n",
+    "\n",
+    "- Recall (Sensitivity): The ratio of true positive predictions to the total number of actual positive instances in the dataset. It measures the model's ability to correctly identify positive instances.\n",
+    "\n",
+    "- F1-Score: The harmonic mean of precision and recall. It gives a balanced measure of a model's accuracy.\n",
+    "\n",
+    "- Support: The number of actual occurrences of each class in the test set.\n",
+    "\n",
+    "- Accuracy: The ratio of correct predictions to the total number of predictions made by the model."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
+   "id": "49fdfc53",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Revenue</th>\n",
+       "      <th>Weekend</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Revenue  Weekend\n",
+       "0        1        1\n",
+       "1        0        0\n",
+       "2        0        1\n",
+       "3        1        1\n",
+       "4        1        1"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
    "id": "68437b85",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "     Revenue       0.97      0.99      0.98       879\n",
+      "     Weekend       0.92      0.92      0.92       967\n",
+      "\n",
+      "   micro avg       0.94      0.95      0.95      1846\n",
+      "   macro avg       0.94      0.96      0.95      1846\n",
+      "weighted avg       0.94      0.95      0.95      1846\n",
+      " samples avg       0.67      0.68      0.67      1846\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\sahus\\anaconda3\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1344: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in samples with no predicted labels. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "c:\\Users\\sahus\\anaconda3\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1344: UndefinedMetricWarning: Recall and F-score are ill-defined and being set to 0.0 in samples with no true labels. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import classification_report\n",
+    "y_pred = classifier.predict(X_test)\n",
+    "print(classification_report(y_test, y_pred,target_names=['Revenue','Weekend']))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "521aefcb",
+   "metadata": {},
+   "source": [
+    "Let's break down each part of the report:\n",
+    "\n",
+    "```\n",
+    "1. **Revenue Class Metrics**:\n",
+    "   - Precision: 0.97 (97%): Among the instances predicted as \"Revenue\", 97% were correctly predicted.\n",
+    "   - Recall: 0.99 (99%): Among the actual instances of \"Revenue\", the model correctly predicted 99% of them.\n",
+    "   - F1-Score: 0.98 (98%): The harmonic mean of precision and recall for the \"Revenue\" class.\n",
+    "   - Support: 879 instances of the \"Revenue\" class in the test set.\n",
+    "\n",
+    "2. **Weekend Class Metrics**:\n",
+    "   - Precision: 0.92 (92%): Among the instances predicted as \"Weekend\", 92% were correctly predicted.\n",
+    "   - Recall: 0.92 (92%): Among the actual instances of \"Weekend\", the model correctly predicted 92% of them.\n",
+    "   - F1-Score: 0.92 (92%): The harmonic mean of precision and recall for the \"Weekend\" class.\n",
+    "   - Support: 967 instances of the \"Weekend\" class in the test set.\n",
+    "\n",
+    "3. **Micro Avg Metrics**:\n",
+    "   - Micro Avg Precision: 0.94 (94%): This is the average precision calculated across all classes, giving equal weight to each instance.\n",
+    "   - Micro Avg Recall: 0.95 (95%): This is the average recall calculated across all classes, giving equal weight to each instance.\n",
+    "   - Micro Avg F1-Score: 0.95 (95%): This is the average F1-score calculated across all classes, giving equal weight to each instance.\n",
+    "\n",
+    "4. **Macro Avg Metrics**:\n",
+    "   - Macro Avg Precision: 0.94 (94%): This is the average precision calculated for each class and then averaged.\n",
+    "   - Macro Avg Recall: 0.96 (96%): This is the average recall calculated for each class and then averaged.\n",
+    "   - Macro Avg F1-Score: 0.95 (95%): This is the average F1-score calculated for each class and then averaged.\n",
+    "\n",
+    "5. **Weighted Avg Metrics**:\n",
+    "   - Weighted Avg Precision: 0.94 (94%): This is the weighted average precision, where each class's precision is weighted by its support.\n",
+    "   - Weighted Avg Recall: 0.95 (95%): This is the weighted average recall, where each class's recall is weighted by its support.\n",
+    "   - Weighted Avg F1-Score: 0.95 (95%): This is the weighted average F1-score, where each class's F1-score is weighted by its support.\n",
+    "\n",
+    "6. **Samples Avg Metrics**:\n",
+    "   - Samples Avg Precision: 0.67 (67%): This is the average precision calculated for each sample (row) in the multi-label setting.\n",
+    "   - Samples Avg Recall: 0.68 (68%): This is the average recall calculated for each sample (row) in the multi-label setting.\n",
+    "   - Samples Avg F1-Score: 0.67 (67%): This is the average F1-score calculated for each sample (row) in the multi-label setting.\n",
+    "```\n",
+    "\n",
+    "Overall, the model seems to perform well, achieving high precision and recall for both the \"Revenue\" and \"Weekend\" classes. However, it's essential to analyze the metrics in the context of the specific problem and business requirements."
+   ]
   }
  ],
  "metadata": {
